fix: video not cropped when aligned right/left

--- a/src/theme/io-sanita/components/blocks/_video.scss
+++ b/src/theme/io-sanita/components/blocks/_video.scss
@@ -52,7 +52,7 @@
     }
   }
 
-  &.align.center iframe,
+  .video-inner iframe,
   &.full .video-inner.full-width iframe {
     position: absolute;
     top: 0;
